# radioclock

./: .gitignore  README.md
.github/workflows/: makefile.yml
enclosure/: antenna_holder.stl  dots_2.4.stl  dots_print.stl  dots_print_wider.stl  seconds_leds.stl
firmware/: AtmelStart.env_conf  AtmelStart.gpdsc  CMakeLists.txt  README.md  atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  driver_init.h  main.c  openocd.cfg  stdio_start.c
firmware/armcc/: Makefile
firmware/config/: hpl_adc_config.h  hpl_eic_config.h  hpl_gclk_config.h  hpl_sercom_config.h  hpl_sysctrl_config.h  hpl_tc_config.h  peripheral_clk_config.h
firmware/examples/: driver_examples.c  driver_examples.h
firmware/gcc/: .gitignore  Dockerfile  Makefile
firmware/hal/src/: hal_adc_sync.c  hal_calendar.c  hal_ext_irq.c
firmware/hal/utils/include/: parts.h  version.h
firmware/hpl/core/: hpl_init.c
firmware/hpl/eic/: hpl_eic.c
firmware/hpl/gclk/: hpl_gclk.c
firmware/hpl/rtc/: hpl_rtc.c
firmware/hpl/sercom/: hpl_sercom.c
firmware/hpl/tc/: hpl_tc.c
firmware/hri/: hri_ac_da1.h  hri_adc_da1.h  hri_da1b.h  hri_dac_da1.h  hri_dmac_da1.h  hri_dsu_da1.h  hri_eic_da1.h  hri_evsys_da1.h  hri_gclk_da1.h  hri_hmatrixb_da1.h  hri_i2s_da1.h  hri_mtb_da1.h  hri_nvic_da1.h  hri_nvmctrl_da1.h  hri_pac_da1.h  hri_pm_da1.h  hri_port_da1.h  hri_rtc_da1.h  hri_sercom_da1.h  hri_sysctrl_da1.h  hri_systemcontrol_da1.h  hri_systick_da1.h  hri_tc_da1.h  hri_tcc_da1.h  hri_usb_da1.h  hri_wdt_da1.h
firmware/include/: dcf.h  dcf_parser.h  dht.h  display.h  font.h  ldr.h  log.h  millis.h  peripherals.h  power.h  switch.h  timezone.h  utils.h
firmware/openocd/: openocd.cfg  samda1e15b.cfg  samda1e16b.cfg
firmware/samda1b/gcc/: system_samda1.c
firmware/samda1b/gcc/gcc/: startup_samda1.c
firmware/samda1b/include/: sam.h
firmware/src/: dcf.c  dcf_parser.c  dht.c  display.c  font.c  ldr.c  log.c  millis.c  peripherals.c  power.c  switch.c  timezone.c  utils.c
firmware/tests/: Makefile  dcf_parser.c  dcf_parser.h  font.c  font.h  test.c  utils.c
kicad/: .gitignore  1072.lib  atomic_clock.kicad_pcb  atomic_clock.kicad_prl  atomic_clock.kicad_pro  atomic_clock.kicad_sch  atomic_clock.kicad_sch-bak  atomic_clock.xml  bom.csv  fp-info-cache  fp-lib-table  local_symbols.bak  local_symbols.kicad_sym  sym-lib-table
kicad/3dmodels/: led_XLxx13.step
kicad/local_footprints.pretty/: 1072.kicad_mod  Battery_pads.kicad_mod  DCF77 receiver module.kicad_mod  DHT20.kicad_mod  LED_D2.0mm_W4.8mm_H2.5mm_FlatTop.kicad_mod  sam_swd_header.kicad_mod
tools/: dcf.py  ftdi.py
