cmake_minimum_required(VERSION 3.22)
project(firmware C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(config)
include_directories(hal/include)
include_directories(hal/utils/include)
include_directories(hpl/core)
include_directories(hpl/gclk)
include_directories(hpl/pm)
include_directories(hpl/port)
include_directories(hri)
include_directories(samda1b/include)
include_directories(samda1b/include/component)
include_directories(samda1b/include/instance)
include_directories(samda1b/include/pio)

add_executable(firmware
        config/hpl_dmac_config.h
        config/hpl_gclk_config.h
        config/hpl_pm_config.h
        config/hpl_sercom_config.h
        config/hpl_sysctrl_config.h
        config/hpl_systick_config.h
        config/peripheral_clk_config.h
        hal/include/hal_atomic.h
        hal/include/hal_delay.h
        hal/include/hal_gpio.h
        hal/include/hal_init.h
        hal/include/hal_io.h
        hal/include/hal_sleep.h
        hal/include/hal_usart_sync.h
        hal/include/hpl_core.h
        hal/include/hpl_delay.h
        hal/include/hpl_dma.h
        hal/include/hpl_gpio.h
        hal/include/hpl_i2c_m_async.h
        hal/include/hpl_i2c_m_sync.h
        hal/include/hpl_i2c_s_async.h
        hal/include/hpl_i2c_s_sync.h
        hal/include/hpl_init.h
        hal/include/hpl_irq.h
        hal/include/hpl_missing_features.h
        hal/include/hpl_reset.h
        hal/include/hpl_sleep.h
        hal/include/hpl_spi.h
        hal/include/hpl_spi_async.h
        hal/include/hpl_spi_m_async.h
        hal/include/hpl_spi_m_dma.h
        hal/include/hpl_spi_m_sync.h
        hal/include/hpl_spi_s_async.h
        hal/include/hpl_spi_s_sync.h
        hal/include/hpl_spi_sync.h
        hal/include/hpl_time_measure.h
        hal/include/hpl_usart.h
        hal/include/hpl_usart_async.h
        hal/include/hpl_usart_sync.h
        hal/src/hal_atomic.c
        hal/src/hal_delay.c
        hal/src/hal_gpio.c
        hal/src/hal_init.c
        hal/src/hal_io.c
        hal/src/hal_sleep.c
        hal/src/hal_usart_sync.c
        hal/utils/include/compiler.h
        hal/utils/include/err_codes.h
        hal/utils/include/events.h
        hal/utils/include/parts.h
        hal/utils/include/utils.h
        hal/utils/include/utils_assert.h
        hal/utils/include/utils_event.h
        hal/utils/include/utils_increment_macro.h
        hal/utils/include/utils_list.h
        hal/utils/include/utils_repeat_macro.h
        hal/utils/src/utils_assert.c
        hal/utils/src/utils_event.c
        hal/utils/src/utils_list.c
        hal/utils/src/utils_syscalls.c
        hpl/core/hpl_core_m0plus_base.c
        hpl/core/hpl_core_port.h
        hpl/core/hpl_init.c
        hpl/dmac/hpl_dmac.c
        hpl/gclk/hpl_gclk.c
        hpl/gclk/hpl_gclk_base.h
        hpl/pm/hpl_pm.c
        hpl/pm/hpl_pm_base.h
        hpl/port/hpl_gpio_base.h
        hpl/sercom/hpl_sercom.c
        hpl/sysctrl/hpl_sysctrl.c
        hpl/systick/hpl_systick.c
        hri/hri_ac_da1.h
        hri/hri_adc_da1.h
        hri/hri_da1b.h
        hri/hri_dac_da1.h
        hri/hri_dmac_da1.h
        hri/hri_dsu_da1.h
        hri/hri_eic_da1.h
        hri/hri_evsys_da1.h
        hri/hri_gclk_da1.h
        hri/hri_hmatrixb_da1.h
        hri/hri_i2s_da1.h
        hri/hri_mtb_da1.h
        hri/hri_nvic_da1.h
        hri/hri_nvmctrl_da1.h
        hri/hri_pac_da1.h
        hri/hri_pm_da1.h
        hri/hri_port_da1.h
        hri/hri_rtc_da1.h
        hri/hri_sercom_da1.h
        hri/hri_sysctrl_da1.h
        hri/hri_systemcontrol_da1.h
        hri/hri_systick_da1.h
        hri/hri_tc_da1.h
        hri/hri_tcc_da1.h
        hri/hri_usb_da1.h
        hri/hri_wdt_da1.h
        samda1b/gcc/gcc/startup_samda1.c
        samda1b/gcc/system_samda1.c
        samda1b/include/component/ac.h
        samda1b/include/component/adc.h
        samda1b/include/component/dac.h
        samda1b/include/component/dmac.h
        samda1b/include/component/dsu.h
        samda1b/include/component/eic.h
        samda1b/include/component/evsys.h
        samda1b/include/component/gclk.h
        samda1b/include/component/hmatrixb.h
        samda1b/include/component/i2s.h
        samda1b/include/component/mtb.h
        samda1b/include/component/nvmctrl.h
        samda1b/include/component/pac.h
        samda1b/include/component/pm.h
        samda1b/include/component/port.h
        samda1b/include/component/rtc.h
        samda1b/include/component/sercom.h
        samda1b/include/component/sysctrl.h
        samda1b/include/component/tc.h
        samda1b/include/component/tcc.h
        samda1b/include/component/usb.h
        samda1b/include/component/wdt.h
        samda1b/include/instance/ac.h
        samda1b/include/instance/adc.h
        samda1b/include/instance/dac.h
        samda1b/include/instance/dmac.h
        samda1b/include/instance/dsu.h
        samda1b/include/instance/eic.h
        samda1b/include/instance/evsys.h
        samda1b/include/instance/gclk.h
        samda1b/include/instance/i2s.h
        samda1b/include/instance/mtb.h
        samda1b/include/instance/nvmctrl.h
        samda1b/include/instance/pac0.h
        samda1b/include/instance/pac1.h
        samda1b/include/instance/pac2.h
        samda1b/include/instance/pm.h
        samda1b/include/instance/port.h
        samda1b/include/instance/rtc.h
        samda1b/include/instance/sbmatrix.h
        samda1b/include/instance/sercom0.h
        samda1b/include/instance/sercom1.h
        samda1b/include/instance/sercom2.h
        samda1b/include/instance/sercom3.h
        samda1b/include/instance/sercom4.h
        samda1b/include/instance/sercom5.h
        samda1b/include/instance/sysctrl.h
        samda1b/include/instance/tc3.h
        samda1b/include/instance/tc4.h
        samda1b/include/instance/tc5.h
        samda1b/include/instance/tc6.h
        samda1b/include/instance/tc7.h
        samda1b/include/instance/tcc0.h
        samda1b/include/instance/tcc1.h
        samda1b/include/instance/tcc2.h
        samda1b/include/instance/usb.h
        samda1b/include/instance/wdt.h
        samda1b/include/pio/samda1e14b.h
        samda1b/include/pio/samda1e15b.h
        samda1b/include/pio/samda1e16b.h
        samda1b/include/pio/samda1g14b.h
        samda1b/include/pio/samda1g15b.h
        samda1b/include/pio/samda1g16b.h
        samda1b/include/pio/samda1j14b.h
        samda1b/include/pio/samda1j15b.h
        samda1b/include/pio/samda1j16b.h
        samda1b/include/component-version.h
        samda1b/include/sam.h
        samda1b/include/samda1.h
        samda1b/include/samda1e14b.h
        samda1b/include/samda1e15b.h
        samda1b/include/samda1e16b.h
        samda1b/include/samda1g14b.h
        samda1b/include/samda1g15b.h
        samda1b/include/samda1g16b.h
        samda1b/include/samda1j14b.h
        samda1b/include/samda1j15b.h
        samda1b/include/samda1j16b.h
        samda1b/include/system_samda1.h
        atmel_start.c
        atmel_start.h
        atmel_start_pins.h
        driver_init.c
        driver_init.h
        main.c)
